--- a/HoI2Editor/Documents/Jp/changelog.txt
+++ b/HoI2Editor/Documents/Jp/changelog.txt
@@ -1,5 +1,11 @@
 Alternative HoI2 Editor 更新履歴
 
+- 2020/08/23 Ver 0.54
+
+G.B.遠藤による改造版。
+.NET Frameworkのバージョンを4.0に変更。
+DH1.05に仮対応。
+
 - 2016/02/06 Ver 0.53
 
 シナリオファイルを保存すると書き込みエラーになる不具合修正。
