[変更/修正]研究速度画面に機能を追加・ユニット名、閣僚画面での不具合を修正
・閣僚の登場年の設定次第でエディタがクラッシュする不具合を解消
・ユニット名画面にd_rsv_33-40とd_01-99の師団名を扱う能力を追加
・研究機関の使用可能年を考慮するオプションを追加

--- a/HoI2Editor/Documents/En/changelog.txt
+++ b/HoI2Editor/Documents/En/changelog.txt
@@ -1,5 +1,10 @@
 Alternative HoI2 Editor Changelog
 
+- 26 Aug 2020; Ver 0.55
+Fixed a data writing error which cannot edit user defined division's name.
+Fixed a crash when minister file has values over 10000 at Start/End/Retirement year.
+Added a function in Research speed viewer that consider tech team's start and end year. 
+
 - 23 Aug 2020; Ver 0.54
 
 Modified by G.B.Endo that has no relationship with original author, nkodama.
