--- a/HoI2Editor/Documents/Jp/changelog.txt
+++ b/HoI2Editor/Documents/Jp/changelog.txt
@@ -1,5 +1,10 @@
 Alternative HoI2 Editor 更新履歴
 
+- 2020/08/26 Ver 0.55
+DH1.03以降のバージョンでd_rsv_～以降の師団を追加している場合にユニット名を正常に読み書き出来なくなる不具合を修正。
+閣僚ファイルで、閣僚の登場年・終了年・引退年が9999年を超えている場合にエディタがクラッシュする不具合を修正。
+研究速度画面に、それぞれの研究機関の開始年と終了年を考慮した研究機関リストを表示する機能を追加。
+
 - 2020/08/23 Ver 0.54
 
 G.B.遠藤による改造版。
