--- a/HoI2Editor/Forms/ResearchViewerForm.ja.resx
+++ b/HoI2Editor/Forms/ResearchViewerForm.ja.resx
@@ -112,10 +112,10 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="techNameColumnHeader.Text" xml:space="preserve">
     <value>名前</value>
@@ -129,7 +129,6 @@
   <data name="techGroupBox.Text" xml:space="preserve">
     <value>技術</value>
   </data>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="specifiedRadioButton.Text" xml:space="preserve">
     <value>指定した日付を使用</value>
   </data>
@@ -177,5 +176,8 @@
   </data>
   <data name="$this.Text" xml:space="preserve">
     <value>研究速度ビューア</value>
+  </data>
+  <data name="techteamstartyearCheckBox.Text" xml:space="preserve">
+    <value>研究機関の開始年・終了年を考慮</value>
   </data>
 </root>
